--- a/AngularJSClient/UsersPage.html
+++ b/AngularJSClient/UsersPage.html
@@ -49,9 +49,9 @@
             </div>
         </div>
     </div>
-    <div ng-app class="container body-content">
+    <div ng-app="Users" class="container body-content">
 
-        <script src="../Controllers/UsersController.js"></script>
+        <script src="Modules/Users.js"></script>
 
         <div ng-controller="UsersController">
             <table>
